--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "number-format-x",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Format a number.",
   "homepage": "https://github.com/Xotic750/number-format-x",
   "author": {
@@ -30,10 +30,10 @@
   },
   "dependencies": {
     "lodash.isnull": "^3.0.0",
-    "math-clamp": "^1.0.0",
-    "to-integer-x": "^2.0.0",
-    "to-number-x": "^1.0.0",
-    "to-string-x": "^1.4.0"
+    "math-clamp-x": "^1.0.0",
+    "to-integer-x": "^2.0.1",
+    "to-number-x": "^1.0.1",
+    "to-string-x": "^1.4.1"
   },
   "devDependencies": {
     "@xotic750/eslint-config-standard-x": "^2.2.1",
