--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "number-format-x",
-  "version": "2.1.0",
+  "version": "3.0.0",
   "description": "Format a number.",
   "homepage": "https://github.com/Xotic750/number-format-x",
   "author": {
@@ -29,11 +29,14 @@
     "url": "https://github.com/Xotic750/number-format-x/issues"
   },
   "dependencies": {
-    "lodash.isnull": "^3.0.0",
-    "math-clamp-x": "^1.1.0",
-    "to-integer-x": "^2.1.0",
-    "to-number-x": "^1.1.0",
-    "to-string-x": "^1.4.1"
+    "cached-constructors-x": "^1.0.0",
+    "is-finite-x": "^3.0.2",
+    "is-nil-x": "^1.4.1",
+    "math-clamp-x": "^1.2.0",
+    "number-to-decimal-form-string-x": "^1.0.0",
+    "to-integer-x": "^3.0.0",
+    "to-number-x": "^2.0.0",
+    "to-string-x": "^1.4.2"
   },
   "devDependencies": {
     "@xotic750/eslint-config-standard-x": "^2.2.1",
