--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "number-format-x",
-  "version": "4.0.2",
+  "version": "4.0.3",
   "description": "Format a number.",
   "homepage": "https://github.com/Xotic750/number-format-x",
   "author": {
@@ -49,13 +49,13 @@
     "url": "https://github.com/Xotic750/number-format-x/issues"
   },
   "dependencies": {
-    "is-finite-x": "^4.0.15",
-    "is-nil-x": "^2.0.15",
-    "math-clamp-x": "^3.0.12",
-    "number-to-decimal-form-string-x": "^2.0.8",
-    "to-integer-x": "^4.0.18",
-    "to-number-x": "^3.0.18",
-    "to-string-x": "^2.0.24"
+    "is-finite-x": "^4.0.17",
+    "is-nil-x": "^2.0.17",
+    "math-clamp-x": "^3.0.13",
+    "number-to-decimal-form-string-x": "^2.0.9",
+    "to-integer-x": "^4.0.19",
+    "to-number-x": "^3.0.19",
+    "to-string-x": "^2.0.26"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
@@ -69,14 +69,14 @@
     "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/runtime": "^7.5.5",
-    "@prorenata/eslint-config-vue": "^1.13.7",
+    "@prorenata/eslint-config-vue": "^1.13.9",
     "@types/jest": "^24.0.15",
     "@types/node": "^12.6.8",
     "babel-core": "^7.0.0-0",
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.6",
     "babel-plugin-lodash": "^3.3.4",
-    "caniuse-lite": "^1.0.30000984",
+    "caniuse-lite": "^1.0.30000985",
     "chalk": "^2.4.2",
     "concurrently": "^4.1.1",
     "cross-env": "^5.2.0",
@@ -91,9 +91,9 @@
     "eslint-plugin-css-modules": "^2.11.0",
     "eslint-plugin-eslint-comments": "^3.1.2",
     "eslint-plugin-html": "^6.0.0",
-    "eslint-plugin-import": "^2.18.0",
-    "eslint-plugin-jest": "^22.10.0",
-    "eslint-plugin-jsdoc": "^15.5.2",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^22.13.0",
+    "eslint-plugin-jsdoc": "^15.6.0",
     "eslint-plugin-json": "^1.4.0",
     "eslint-plugin-lodash": "^5.1.0",
     "eslint-plugin-no-use-extend-native": "^0.4.1",
@@ -109,7 +109,7 @@
     "jest-cli": "^24.8.0",
     "jest-file": "^1.0.0",
     "jsdoc-to-markdown": "^5.0.0",
-    "lodash": "^4.17.14",
+    "lodash": "^4.17.15",
     "lodash-webpack-plugin": "^0.11.5",
     "mkdirp": "^0.5.1",
     "node-notifier": "^5.4.0",
@@ -118,6 +118,7 @@
     "rimraf": "^2.6.3",
     "semver": "^6.2.0",
     "source-map-loader": "^0.2.4",
+    "strip-ansi": "^5.2.0",
     "terser-webpack-plugin": "^1.3.0",
     "typescript": "^3.5.3",
     "webpack": "^4.36.1",
