--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "number-format-x",
-  "version": "4.0.5",
+  "version": "4.0.6",
   "description": "Format a number.",
   "homepage": "https://github.com/Xotic750/number-format-x",
   "author": {
@@ -22,6 +22,7 @@
   ],
   "module": "dist/number-format-x.esm.js",
   "main": "dist/number-format-x.js",
+  "jsdelivr": "dist/number-format-x.min.js",
   "scripts": {
     "build:esm": "mkdirp dist && babel -s true --env-name esm src/number-format-x.js -o dist/number-format-x.esm.js",
     "build:base": "webpack --bail --progress --profile --colors",
@@ -49,13 +50,13 @@
     "url": "https://github.com/Xotic750/number-format-x/issues"
   },
   "dependencies": {
-    "is-finite-x": "^4.0.19",
-    "is-nil-x": "^2.0.19",
-    "math-clamp-x": "^3.0.15",
-    "number-to-decimal-form-string-x": "^2.0.11",
-    "to-integer-x": "^4.0.21",
-    "to-number-x": "^3.0.21",
-    "to-string-x": "^2.0.28"
+    "is-finite-x": "^4.0.21",
+    "is-nil-x": "^2.0.21",
+    "math-clamp-x": "^3.0.17",
+    "number-to-decimal-form-string-x": "^2.0.13",
+    "to-integer-x": "^4.0.23",
+    "to-number-x": "^3.0.23",
+    "to-string-x": "^2.0.30"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
@@ -93,7 +94,7 @@
     "eslint-plugin-html": "^6.0.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jest": "^22.13.6",
-    "eslint-plugin-jsdoc": "^15.7.1",
+    "eslint-plugin-jsdoc": "^15.7.2",
     "eslint-plugin-json": "^1.4.0",
     "eslint-plugin-lodash": "^5.1.0",
     "eslint-plugin-no-use-extend-native": "^0.4.1",
