--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "number-format-x",
-  "version": "4.0.8",
+  "version": "4.0.9",
   "description": "Format a number.",
   "homepage": "https://github.com/Xotic750/number-format-x",
   "author": {
@@ -30,7 +30,7 @@
     "build:dev": "npm run build:base --",
     "clean": "rimraf dist && npm run clean:coverage",
     "clean:coverage": "rimraf __tests__/coverage",
-    "lint": "eslint -f 'node_modules/eslint-friendly-formatter' --ext .js .",
+    "lint": "eslint -f 'node_modules/eslint-friendly-formatter' --ext .js,.json .",
     "lint-fix": "npm run lint -- --fix",
     "report": "npm run build -- --env.report",
     "report:dev": "npm run build:dev -- --env.report",
@@ -50,13 +50,13 @@
     "url": "https://github.com/Xotic750/number-format-x/issues"
   },
   "dependencies": {
-    "is-finite-x": "^4.0.23",
-    "is-nil-x": "^2.0.23",
-    "math-clamp-x": "^3.0.19",
-    "number-to-decimal-form-string-x": "^2.0.15",
-    "to-integer-x": "^4.0.25",
-    "to-number-x": "^3.0.25",
-    "to-string-x": "^2.0.32"
+    "is-finite-x": "^4.0.25",
+    "is-nil-x": "^2.0.25",
+    "math-clamp-x": "^3.0.22",
+    "number-to-decimal-form-string-x": "^2.0.17",
+    "to-integer-x": "^4.0.28",
+    "to-number-x": "^3.0.28",
+    "to-string-x": "^2.0.34"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
@@ -70,14 +70,14 @@
     "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/runtime": "^7.5.5",
-    "@prorenata/eslint-config-vue": "^1.13.12",
+    "@prorenata/eslint-config-vue": "^1.13.14",
     "@types/jest": "^24.0.15",
     "@types/node": "^12.6.8",
     "babel-core": "^7.0.0-0",
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.6",
     "babel-plugin-lodash": "^3.3.4",
-    "caniuse-lite": "^1.0.30000985",
+    "caniuse-lite": "^1.0.30000986",
     "chalk": "^2.4.2",
     "concurrently": "^4.1.1",
     "cross-env": "^5.2.0",
@@ -93,7 +93,7 @@
     "eslint-plugin-eslint-comments": "^3.1.2",
     "eslint-plugin-html": "^6.0.0",
     "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jest": "^22.13.7",
+    "eslint-plugin-jest": "^22.14.0",
     "eslint-plugin-jsdoc": "^15.7.2",
     "eslint-plugin-json": "^1.4.0",
     "eslint-plugin-lodash": "^5.1.0",
